[package]
name = "hello_fs"
version = "0.1.0"
authors = ["hakua-doublemoon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = { path = "../", version = "=0.4.0-dev" }
#fuse-abi = { path = "../fuse-abi", version = "=0.4.0-dev" }
#fuse-sys = { path = "../fuse-sys", version = "=0.4.0-dev" }
libc = "0.2.51"
log = "0.4.6"
#thread-scoped = "1.0.2"
nix = "0.15.0"
#env_logger = "0.6.0"
rand = "0.7.2"

